# replicate-mcp-agents

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  kilo.json  mkdocs.yml  pm_auditor_evidence_bundle.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: sprint-story.md
.github/workflows/: ci.yml  release.yml  security.yml
.mcp/: context.json
.stagewise/: WORKSPACE.md
docs/: Academic Evaluation.md  Program Delivery Plan · v1.0.md  getting-started.md  mcp-integration.md  slos.md  workflow-guide.md
docs/AUDIT/: AUDIT_SUMMARY.md  FALSE_POSITIVE_ANALYSIS.md  FALSE_POSITIVE_SUMMARY.md  SECURITY_AUDIT_REPORT.md  TRUE_NATURE_ANALYSIS.md  validation_audit_report.json
docs/adr/: 001-dependency-cleanup.md  002-dag-engine.md  003-protocol-interfaces.md  004-resilience-patterns.md  005-cost-routing.md  006.md  007.md  008-Distributed Execution Model.md  009-latitude-integration.md  010-v080-features.md  010-worker-circuit-breakers.md  011-version-pinning.md  012-cache-eviction-policy.md
docs/api/: discovery.md  index.md  sdk.md
docs/guides/: getting-started.md  plugins.md
docs/runbooks/: top-10-failures.md
examples/: latitude_integration.py
examples/workflows/: content_pipeline.yaml  research_synthesis.yaml
src/replicate_mcp/: __init__.py  cache.py  discovery.py  distributed.py  dsl.py  exceptions.py  interfaces.py  latitude.py  latitude.py.bak  observability.py  qos.py  ratelimit.py  resilience.py  routing.py  sdk.py  security.py  server.py  validation.py  worker_circuit_breaker.py  worker_server.py
src/replicate_mcp/agents/: __init__.py  composition.py  execution.py  registry.py  transforms.py
src/replicate_mcp/cli/: __init__.py  main.py
src/replicate_mcp/mcp/: __init__.py  protocol.py  transport.py
src/replicate_mcp/plugins/: __init__.py  base.py  builtin.py  loader.py  registry.py
src/replicate_mcp/utils/: __init__.py  audit.py  checkpointing.py  logging.py  router_state.py  telemetry.py
tests/integration/: test_executor_mocked.py  test_worker_circuit_breaker_integration.py
tests/load/: locustfile.py
tests/unit/: test_audit.py  test_builtin_plugins.py  test_cache.py  test_cache_eviction_policy.py  test_checkpointing.py  test_cli.py  test_cli_smoke.py  test_composition.py  test_discovery.py  test_distributed.py  test_dsl.py  test_error_classification.py  test_exceptions.py  test_execution.py  test_interfaces.py  test_logging.py  test_mcp_protocol.py  test_observability.py  test_plugins.py  test_qos.py  test_ratelimit.py  test_registry.py  test_resilience.py  test_router_state.py  test_routing.py  test_sdk.py  test_security.py  test_server.py  test_telemetry.py  test_transforms.py  test_validation.py  test_version_pinning.py  test_worker_circuit_breaker.py  test_worker_server.py
