[project]
name = "replicate-mcp-agents"
version = "0.3.0"
description = "MCP-native agent orchestration for Replicate models"
authors = [
    {name = "Your Team", email = "team@example.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "replicate (>=2.0.0b1,<3.0.0)",
    "mcp (>=1.20.0,<2.0.0)",
    "click (>=8.1.7,<9.0.0)",
    "pydantic (>=2.9.0,<3.0.0)",
    "anyio (>=4.6.0,<5.0.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "rich (>=13.9.0,<14.0.0)",
    "structlog (>=24.0.0,<26.0.0)",
]

[project.optional-dependencies]
# OpenTelemetry — install with: pip install "replicate-mcp-agents[otel]"
otel = [
    "opentelemetry-sdk>=1.26.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.26.0,<2.0.0",
]
# Load testing
load = [
    "locust>=2.31.0,<3.0.0",
]
# Full dev extras
all = [
    "replicate-mcp-agents[otel]",
    "replicate-mcp-agents[load]",
]

[project.scripts]
"replicate-agent" = "replicate_mcp.cli.main:app"
"replicate-mcp-server" = "replicate_mcp.server:serve"


[tool.poetry]
packages = [{include = "replicate_mcp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
ruff = "^0.7.0"
pre-commit = "^4.0.0"

# mcp is now a core dependency; no longer needed in a separate group

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {version = "^0.26.0", extras = ["python"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/replicate_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
    "-v"
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ASYNC", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "replicate.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

