[project]
name = "replicate-mcp-agents"
version = "0.6.0"
description = "MCP-native agent orchestration for Replicate models"
authors = [
    {name = "pt-act", email = "racore88.ai@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "replicate (>=2.0.0b1,<3.0.0)",
    "mcp (>=1.20.0,<2.0.0)",
    "click (>=8.1.7,<9.0.0)",
    "pydantic (>=2.9.0,<3.0.0)",
    "anyio (>=4.6.0,<5.0.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "rich (>=13.9.0,<14.0.0)",
    "structlog (>=24.0.0,<26.0.0)",
]

[project.optional-dependencies]
# OpenTelemetry — install with: pip install "replicate-mcp-agents[otel]"
otel = [
    "opentelemetry-sdk>=1.26.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.26.0,<2.0.0",
]
# Load testing
load = [
    "locust>=2.31.0,<3.0.0",
]
# HTTP transport — install with: pip install "replicate-mcp-agents[http]"
# Enables: serve_http(), serve_streamable_http(), serve_worker(), workers start
http = [
    "uvicorn>=0.29.0,<1.0.0",
]
# Latitude integration — install with: pip install "replicate-mcp-agents[latitude]"
# Enables: Prompt management, tracing, evaluations via latitude.sh
latitude = [
    "httpx>=0.27.0,<0.28.0",
]
# Full dev extras — inlined to avoid self-referencing extras (Poetry compat)
all = [
    "opentelemetry-sdk>=1.26.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.26.0,<2.0.0",
    "locust>=2.31.0,<3.0.0",
    "uvicorn>=0.29.0,<1.0.0",
    "httpx>=0.27.0,<0.28.0",
]

[project.scripts]
"replicate-agent" = "replicate_mcp.cli.main:app"
"replicate-mcp-server" = "replicate_mcp.server:serve"

# Plugin entry-point group: third-party plugins register here.
# Example in a plugin's pyproject.toml:
#   [project.entry-points."replicate_mcp.plugins"]
#   my_plugin = "my_package.plugin:MyPlugin"
[project.entry-points."replicate_mcp.plugins"]
# (no built-in plugins yet — placeholder so the group is documented)


[tool.poetry]
packages = [{include = "replicate_mcp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
ruff = "^0.7.0"
pre-commit = "^4.0.0"

# ── Security: force patched versions of vulnerable transitive deps ──────────
# CVE-2025-62727: starlette <0.49.1 (via mcp → sse-starlette)
starlette = ">=0.49.1"
# CVE-2026-24486 + CVE-2026-40347: python-multipart <0.0.26 (via mcp)
python-multipart = ">=0.0.26"
# CVE-2026-4539: pygments <2.20.0 (via rich + pytest)
pygments = ">=2.20.0"
# CVE-2026-28684: python-dotenv <1.2.2 (via mcp)
python-dotenv = ">=1.2.2"

# mcp is now a core dependency; no longer needed in a separate group

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {version = "^0.26.0", extras = ["python"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "-v"
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ASYNC", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "replicate.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "keyring"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

